objects/ASI_KOR_Promotion_Details__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotion Details</relationshipLabel>
        <relationshipName>ASI_KOR_Targeted_By_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipName>ASI_KOR_Promotion_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_End_Date__c</fullName>
        <formula>ASI_KOR_Promotion__r.ASI_KOR_Promotion_End_Date__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_Code__c</fullName>
        <formula>ASI_KOR_Promotion__r.ASI_KOR_Promotion_Name__c</formula>
        <label>Promotion Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion_Record_Type__c</fullName>
        <formula>ASI_KOR_Promotion__r.ASI_KOR_Record_Type_Name__c</formula>
        <label>Promotion Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Promotion__c</fullName>
        <label>Promotion Code</label>
        <referenceTo>ASI_KOR_Promotion__c</referenceTo>
        <relationshipLabel>Promotion Details</relationshipLabel>
        <relationshipName>ASI_KOR_Promotion_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Start_Date__c</fullName>
        <formula>ASI_KOR_Promotion__r.ASI_KOR_Promotion_Start_Date__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Status__c</fullName>
        <formula>ASI_KOR_Promotion__r.ASI_KOR_Status__c</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Target__c</fullName>
        <formula>HYPERLINK( &apos;/&apos; &amp; IF( $RecordType.DeveloperName == &apos;ASI_KOR_Brand&apos;, ASI_KOR_Brand__c, ASI_KOR_Account__c )
, IF( $RecordType.DeveloperName == &apos;ASI_KOR_Brand&apos;, ASI_KOR_Brand__r.Name , ASI_KOR_Account__r.Name ))</formula>
        <label>Target</label>
        <type>Text</type>
    </fields>
    <label>Promotion Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Promotion Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_KOR_Account</fullName>
        <active>true</active>
        <label>Wholesaler / Venue</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_Brand</fullName>
        <active>true</active>
        <label>Brand</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>